static/css/style.css
:root{
  --g3-color__brand-yellow: #DBCB32;
  --g3-color__brand-blue: #003E7D;
  --g3-color__brand-blue--hover: #3498D6;
  --g3-color__brand-purple: #793A78;
  --g3-color__brand-purple--hover: #9E4D9C;
  --g3-color__brand-mint: #9ECCC7;
  --g3-color__bg-bluegrey: #4F586F;
  --g3-color__bg-solight: #F4F5F9;
  --g3-color__bg-lightpurple: #ECE8F4;
}

body, p {
  padding: 0;
  margin: 0;
  font-weight: 300;
  font-size: 15px;
  letter-spacing: 0.02rem;
  line-height: 1.6em;
  color: black;
  font-family: 'Khula', sans-serif;
}

h1, h2, h3, h4 {
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 0;
  color: black;
}

h1 {
  font-size: 36px;
  letter-spacing: 0.01rem;
  line-height: 1.3em;
}

h2 {
  font-size: 30px;
  letter-spacing: 0.01rem;
  line-height: 1.2em;
}

h3 {
  font-size: 24px;
  letter-spacing: 0rem;
  line-height: 1.2em;
}

h4 {
  font-size: 20px;
  letter-spacing: 0rem;
  line-height: 1.45em;
}

.introduction {
  font-weight: 400;
  font-size: 20px;
  letter-spacing: 0.01rem;
  line-height: 1.6em;
  margin: 0;
}

a {
  text-decoration: none;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0.02rem;
  color: var(--g3-color__brand-blue);
}

a:hover {
  color: var(--g3-color__brand-blue--hover);
}

.g3-button {
  width: 223px;
  height: 49px;
  font-weight: 700;
  font-size: 18px;
  color: white;
  text-align: center;
  border: none;
  outline: none;
  cursor: pointer;
}

a.g3-button {
  display: inline-block;
  line-height: 49px;
}

a.g3-button:hover {
  color: white;
}

.g3-button--primary {
  background-color: var(--g3-color__brand-purple);
}

.g3-button--primary:hover,
.g3-button--primary:active {
  background-color: var(--g3-color__brand-purple--hover);
}

.g3-button--secondary {
  background-color: var(--g3-color__brand-blue);
}

.g3-button--secondary:hover,
.g3-button--secondary:active {
  background-color: var(--g3-color__brand-blue--hover);
}

.g3-button-groups .g3-button {
  margin-right: 20px;
  margin-top: 20px;
}

/*---- layout classes ----*/
.g3-iframe-wrapper {
  position: absolute;
  width: 100%;
  top: 140px;
  bottom: 0;
}

.g3-iframe {
  width: 100%;
  height: 100%;
  border: none;
}

.g3-iframe-wrapper + .g3-footer {
  display: none;
}

.g3-flex-content {
  display: flex;
}

.g3-table {
  display: table;
}

.g3-table-row {
  display: table-row;
}

.g3-table>div,
.g3-table-row>div {
  display: table-cell;
  position: relative;
}

.g3-align__bottom {
  position: absolute;
  bottom: -50px;
  left: calc(50% - 110px);
}

.g3-flex-content__reverse {
  flex-direction: row-reverse;
}

.g3-outer-wrapper {
  max-width: 1440px;
  margin: auto;
}

.g3-inner-wrapper {
  max-width: 1220px;
  margin: auto;
}

.g3-mini-wrapper {
  max-width: 860px;
  margin: auto;
}

.g3-minimum-wrapper {
  max-width: 520px;
  margin: auto;
}

.g3-minimunimum-wrapper {
  max-width: 320px;
  margin: auto;
}

.g3-space__padding-lg-top {
  padding-top: 130px;
}

.g3-space__padding-lg-bottom {
  padding-bottom: 130px;
}

.g3-space__padding-lg-top-bottom {
  padding-top: 130px;
  padding-bottom: 130px;
}

.g3-space__padding-md-top {
  padding-top: 60px;
}

.g3-space__padding-md-bottom {
  padding-bottom: 60px;
}

.g3-space__padding-md-top-bottom {
  padding-top: 60px;
  padding-bottom: 60px;
}

.g3-space__padding-md {
  padding: 60px;
}

.g3-space__padding-sm-top {
  padding-top: 20px;
}

.g3-space__padding-sm-bottom {
  padding-bottom: 20px;
}

.g3-space__padding-sm {
  padding: 20px;
}

.g3-space__padding-sm-left-right {
  padding-left: 20px;
  padding-right: 20px;
}

.g3-border__top-bottom {
  border-top: solid 1px black;
  border-bottom: solid 1px black;
}

.g3-border__wider {
  border: solid 7px var(--g3-color__bg-solight);
}

.g3-space__margin-lg-top {
  margin-top: 130px;
}

.g3-space__margin-lg-bottom {
  margin-bottom: 130px;
}

.g3-space__margin-lg-top-bottom {
  margin-top: 130px;
  margin-bottom: 130px;
}

.g3-space__margin-md-top {
  margin-top: 60px;
}

.g3-space__margin-md-bottom {
  margin-bottom: 60px;
}

.g3-space__margin-md-top-bottom {
  margin-top: 60px;
  margin-bottom: 60px;
}

.g3-space__margin-sm-top {
  margin-top: 20px;
}

.g3-space__margin-sm-left {
  margin-left: 20px;
}

.g3-space__margin-sm-left-right {
  margin-left: 20px;
  margin-right: 20px;
}

.g3-space__margin-sm-top-bottom {
  margin-top: 20px;
  margin-bottom: 20px;
}

.g3-space__margin-sm-right {
  margin-right: 20px;
}

.g3-space__margin-sm-bottom {
  margin-bottom: 20px;
}

.g3-bg__solight {
  background-color: var(--g3-color__bg-solight);
}

.g3-bg__mint {
  background-color: var(--g3-color__brand-mint);
}

.g3-col__25 {
  width: 25%;
}

.g3-col__33 {
  width: 33%;
}

.g3-col__35 {
  width: 35%;
}

.g3-col__45 {
  width: 45%;
}

.g3-col__50 {
  width: 50%;
}

.g3-col__55 {
  width: 55%;
}

.g3-col__65 {
  width: 65%;
}

.g3-space__wrapper-gap-left {
  margin-left: 110px;
}

.g3-space__wrapper-gap-right {
  margin-right: 110px;
}

.g3-text__center {
  text-align: center;
}

.g3-text__desktop-left {
  text-align: left;
}

.g3-img__center {
  display: block;
  margin: auto;
}

.g3-img__full-width {
  width: 100%;
}

.g3-img {
  width: auto;
  margin: auto;
}

.g3-img__max-full-width {
  max-width: 100%;
}

/*---- layout for mobile version ----*/
@media screen and (max-width: 700px) {
  .g3-mb-hide {
    display: none;
  }

  .g3-outer-wrapper,
  .g3-inner-wrapper,
  .g3-mini-wrapper,
  .g3-minimum-wrapper {
    width: 100%;
  }

  .g3-iframe-wrapper {
    top: 85px;
  }

  [class*='g3-col__'] {
    width: auto;
    margin-bottom: 60px;
  }

  .g3-flex-content {
    display: inherit;
  }

  .g3-space__padding-lg-top {
    padding-top: 0;
    margin-top: 60px;
  }

  .g3-space__padding-lg-bottom {
    padding-bottom: 0;
    margin-bottom: 60px;
  }

  .g3-space__padding-lg-top-bottom {
    padding-top: 0;
    margin-top: 60px;
    padding-bottom: 0;
    margin-bottom: 60px;
  }

  .g3-space__padding-md-top {
    padding-top: 0px;
    margin-top: 60px;
  }

  .g3-space__padding-md-bottom {
    padding-bottom: 0px;
    margin-bottom: 60px;
  }

  .g3-space__padding-md-top-bottom {
    padding-top: 0;
    margin-top: 20px;
    padding-bottom: 0;
    margin-bottom: 20px;
  }

  .g3-space__padding-md {
    padding: 20px;
  }

  .g3-space__margin-lg-top {
    margin-top: 65px;
  }

  .g3-space__margin-lg-bottom {
    margin-bottom: 65px;
  }

  .g3-space__margin-lg-top-bottom {
    margin-top: 65px;
    margin-bottom: 65px;
  }

  .g3-space__margin-md-top {
    margin-top: 60px;
  }

  .g3-space__margin-md-bottom {
    margin-bottom: 60px;
  }

  .g3-space__margin-md-top-bottom {
    margin-top: 60px;
    margin-bottom: 60px;
  }

  .g3-space__margin-sm-top {
    margin-top: 20px;
  }

  .g3-space__margin-sm-left {
    margin-left: 0;
  }

  .g3-space__margin-sm-left-right {
    margin-left: 0;
    margin-right: 0;
  }

  .g3-space__margin-sm-top-bottom {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .g3-space__margin-sm-right {
    margin-right: 0;
  }

  .g3-space__margin-sm-bottom {
    margin-bottom: 20px;
  }

  .g3-space__wrapper-gap-left {
    margin-left: 0;
  }

  .g3-space__wrapper-gap-right {
    margin-right: 0;
  }

  .g3-mb-space__padding-lg-bottom {
    padding-bottom: 60px;
    margin-bottom: 0;
  }

  .g3-mb-space__padding-lg-top {
    padding-top: 60px;
    margin-top: 0;
  }

  .g3-space__padding-sm-left-right {
    padding-left: 0;
    padding-right: 0;
  }

  .g3-mb-space__margin-lg-bottom {
    margin-bottom: 60px;
  }

  section {
    padding-left: 20px;
    padding-right: 20px;
  }

  .g3-img {
    width: 100%;
  }

  .g3-button-groups {
    text-align: center;
  }

  .g3-button-groups .g3-button {
    margin-right: 0;
  }

  .g3-table,
  .g3-table-row {
    display: block;
  }

  .g3-table>div,
  .g3-table-row>div {
    display: block;
    position: static;
  }

  .g3-align__bottom {
    position: static;
  }

  .g3-mb-text__center {
    text-align: center;
  }

  .g3-text__desktop-left {
    text-align: inherit;
  }
}

